2007-05-14 Werner Hoch  <werner.ho@gmx.de>

	*po/de_DE.po: updated german translation

	*src/rcstrings.c: added new menu entries

2007-05-13 Ales Hvezda   <ahvezda@geda.seul.org>

	* po/nl_NL.po: Copied in new updated Dutch translation from 
	Bert Timmerman.  Thanks.

	* po/it_IT.po: Copied in new updated Italian translation from
	Michele Petrecca.  Thanks.

2007-05-10 Peter Brett <peter@peter-b.co.uk>

	* include/prototype.h, src/x_menus.c: Provide
	  g_file_set_contents() if GLib < 2.8.

	  Patch from Ivan Stankovic, fixing problem with recent files
	  support where gschem didn't work on systems with older versions
	  of GLib, due to g_file_set_contents() not being available.

2007-05-05 Peter Brett <peter@peter-b.co.uk>

	* include/prototype.h, lib/system-gschemrc.in, src/gschem.c,
	  src/x_menus.c, src/x_window.c: Add "Recent Files" list to
	  gschem.

	  Applied patch #1706411 by Ivan Stankovic, which adds a list of
	  recently-accessed files to gschem's File menu.
	
2007-04-27 Carlos Nieves Onega <cnieves (AT) iespana (DOT) es>

	* src/x_image.c: Added sanity check.
	
	* po/es_ES.po: Updated spanish translation.
	
2007-04-22 Carlos Nieves Onega <cnieves (AT) iespana (DOT) es>

	* include/prototype.h, src/g_keys.c, src/g_register.c,
	  i_callbacks.c: Remove "help-manual" Guile callback.

	  Apply patch by Peter Brett.

	  The role of the "help-manual" Guile function exported by
	  gschem has been superceded by the new "gschem-browse-wiki"
	  function.  This patch removes "help-manual" from the C
	  source code entirely; "help-manual" is now a Scheme function
	  defined in "system-gschemrc".


	* lib/system-gschemrc.in: Use gschem-browse-wiki also
	  when opening the manual. 

	  Found a workaround to use gschem-browse-wiki if the user 
	  wants to display the manual (the manual page is not in 
	  the wiki directory).

2007-04-21 Ales Hvezda   <ahvezda@geda.seul.org>

	* gschem/po/de_DE.po gschem/po/es_ES.po gschem/po/fr_FR.po